--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -1431,6 +1431,7 @@ html{
             .content__main--blogitem{
                 width: 100%;
                 .blog__more{
+                    top: 20px;
                     .blog__view{
                         padding: 0 8px;
                         margin-bottom: 10px;
@@ -1444,16 +1445,24 @@ html{
                             }
                             
                         }
-                        .blog__view--title a{
-                            font-size: 14px;
+                        .blog__view--title {
+                            margin-top: 10px;
+                            a{
+                                font-size: 14px;
+                            }
+                            
                         }
                         .blog__view--datepost{
-                            font-size: 10px;
+                            font-size: 8px;
+                            margin-top: 10px;
+                            padding: 0;
                         }
                         .blog__view--des{
                             font-size: 12px;
+                            margin-top: 10px;
                         }
                         .readmore{
+                            margin-top: 10px;
                         }
             
                     }
