resp_about_ver_4

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -449,13 +449,11 @@ html {
 }
 #about .wrap .ar2 {
   width: 100%;
-  height: 650px;
   margin-top: 60px;
   position: relative;
 }
 #about .wrap .ar2 .goal-two {
   width: 100%;
-  height: 650px;
   position: absolute;
 }
 #about .wrap .ar2 .goal-two img {
@@ -465,26 +463,17 @@ html {
   object-position: 0 55%;
   z-index: 1;
 }
-#about .wrap .ar2 .bgr {
-  position: absolute;
-  width: 100%;
-  height: 650px;
-  background-color: #373737;
-  opacity: 0.1;
-  z-index: 2;
-}
 #about .wrap .ar2 .content {
   width: 81%;
   margin: auto;
-  height: 650px;
   display: flex;
   z-index: 3;
   position: relative;
   align-items: center;
 }
 #about .wrap .ar2 .content .content__left {
-  width: 44%;
-  margin-right: 6%;
+  width: 50%;
+  padding-right: 6%;
 }
 #about .wrap .ar2 .content .content__left h2 {
   color: #fc846b;
@@ -625,6 +614,7 @@ html {
   display: flex;
 }
 #about .wrap .ar4 .customer .com {
+  width: 33.3333%;
   padding: 0 20px;
 }
 #about .wrap .ar4 .customer .com p {
@@ -1600,19 +1590,15 @@ html {
     margin: 0;
     margin-top: 40px;
   }
-  #about .wrap .ar2 {
-    height: 1035px;
-  }
-  #about .wrap .ar2 .goal-two {
-    height: 1035px;
-  }
   #about .wrap .ar2 .goal-two img {
-    height: 1035px;
+    height: 1012px;
     object-position: 42% 60%;
+  }
+  #about .wrap .ar2 .comment ~ .goal-two {
+    height: auto;
   }
   #about .wrap .ar2 .content {
     width: 100%;
-    height: 1035px;
     flex-direction: column;
   }
   #about .wrap .ar2 .content .content__left {
@@ -1699,12 +1685,14 @@ html {
   #about .wrap .ar4 .customer .com {
     padding: 0 5px;
     margin-bottom: 20px;
+    width: 100%;
   }
   #about .wrap .ar4 .customer .com p {
     font-size: 11px;
   }
   #about .wrap .ar4 .customer .com .com2 img {
     width: 40px;
+    height: 40px;
   }
   #about .wrap .ar4 .customer .com .com2 .detail h5 {
     font-size: 14px;
@@ -1788,16 +1776,22 @@ html {
   }
 }
 @media (min-width: 410px) and (max-width: 417px) {
-  .filterBy {
-    top: 37%;
+  #about .wrap .ar3 .ar3__left--item1 {
+    width: 100%;
+    top: 20px;
   }
 
-  #aside-bar-mobile {
-    height: 1600px;
+  #about .wrap .ar2 .content {
+    height: 1011px;
   }
 
-  #catalog .content__main .content__main--item .head .head__right .head__right--sort > select {
-    margin-left: -31px;
+  #about .wrap .ar4 {
+    height: 700px;
+  }
+
+  #about .wrap .ar4 .customer .com .com2 img {
+    width: 40px;
+    height: 40px;
   }
 }
 @keyframes fadeIn {
