--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1590,6 +1590,9 @@ html {
     margin: 0;
     margin-top: 40px;
   }
+  #about .wrap .ar2 {
+    height: 1045px;
+  }
   #about .wrap .ar2 .goal-two img {
     height: 1045px;
     object-position: 42% 60%;
@@ -1781,7 +1784,15 @@ html {
     top: 20px;
   }
 
+  #about .wrap .ar2 {
+    height: 1045px;
+  }
+
   #about .wrap .ar2 .content {
+    height: 1045px;
+  }
+
+  #about .wrap .ar2 .goal-two {
     height: 1045px;
   }
 
