352021_resp_service_ver1

--- a/assets/css/about.scss
+++ b/assets/css/about.scss
@@ -1232,7 +1232,9 @@ html{
         margin-bottom: 50px;
         font-size: 32px;
     }
-
+    .ar4 .customer .com .com2 .detail h5 {
+        font-size: 14px !important;
+    }
     .wrapper7{
         height: 380px;
         .footer{
